--- a/src/main/resources/templates/html/category/categoryList.html
+++ b/src/main/resources/templates/html/category/categoryList.html
@@ -1,103 +1,103 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+	<link rel="stylesheet" href="/css/listAct.css">
 	<th:block th:replace="common/head.html"/>
+	<link rel="stylesheet" href="/css/addUser.css">
+	<style>
+		.up {
+			width: auto;
+			background-color: white;
+			margin-bottom: 15px;
+			border-radius: 10px;
+			padding-left: 30px;
+			padding-top: 11px;
+			min-height: 150px;
+			text-align: left;
+		}
+		.title {
+			float: left;
+			margin-top: 5px;
+		}
+		.content > form {
+			float: left;
+		}
+		.content {
+			width: 80%;
+			float: left;
+			margin-bottom: 20px;
+		}
+
+	</style>
 </head>
 <body>
 <header th:replace="common/menu :: header"></header>
 
 <div lang="en" th:replace="common/menu :: menu"></div>
 
-<div id="main" style="margin-left: 15%">
+<div id="main">
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>카테고리 페이지</h1>
-  </div>
-</div>
-
-<div id="wrap">
-
-	<!-- 
-	<form action="/community/category" method="GET">
-		<select name="topCategory">
-			<option type="number" value="0" th:selected="0 == ${topCategory}">전체</option>
-        	<option type="number" value="1" th:selected="1 == ${topCategory}">공지사항</option>
-        	<option type="number" value="2" th:selected="2 == ${topCategory}">커뮤니티</option>
-        	<option type="number" value="3" th:selected="3 == ${topCategory}">문의</option>
-        </select>
-		<button>확인</button>
-	</form>
-	 -->
-	
-	<div>
-		<p th:text="${path}"/>
+	<div class="upper">
+		<h4 class="header">하위 카테고리 관리</h4>
+		<div class="menus" style="width: 360px">
+			<form action="/noticey/category" method="GET">
+				<div class="selectmenu">
+					<input type="hidden" name="topCategory" th:value="${topCategory}">
+					<div class="selectm">
+						<select name="type" class="back searchtype">
+							<option value="1">이름</option>
+<!--							<option value="2">관리자</option>-->
+						</select>
+					</div>
+				</div>
+				<div class="searchlist searchboxlist">
+					<input id="search" name="keyword" type="text" placeholder="검색어를 입력해주세요">
+				</div>
+			</form>
+		</div>
 	</div>
 
-	<!-- Path editing is needed -->
-	<!-- Search -->
-	<div>
-	    <form action="/noticey/category" method="GET">
-	    	<div>
-	    		<input type="hidden" name="topCategory" th:value="${topCategory}">
-	    	</div>
-	        <div class="search" style="float: left">
-	            <input name="keyword" type="text" placeholder="검색어를 입력해주세요">
-	        </div>
-	        <div>
-	        <select name="type" style="float: left">
-				<option value="1">메모</option>
-				<option value="2">관리자</option>
-			</select>
-	        </div>
-			<div style="float: left">
-				<button>검색하기</button>
-			</div>
-	    </form>
-    </div><br><br>
 
-	<div>
-	    <table style="border:1px solid;">
-	        <thead>
-	        <tr>
-	            <th class="one wide">번호</th>
-	            <th class="ten wide">Memo</th>
-	            <th class="two wide">Top</th>
-	            <th class="three wide">Status</th>
-	        </tr>
-	        </thead>
-	
-	        <tbody>
-	        <!-- CONTENTS !-->
-	        <tr th:each="category : ${categoryList}">
-	            <td>
-	                <span th:text="${category.id}"></span>
-	            </td>
-	            <td>
-	            	<a th:href="@{'/'+${path}+'/category/detail/' + ${category.id}+'?topCategory='+${topCategory}}">
-	                    <span th:text="${category.memo}"></span>
-	                </a>
-	            </td>
-	            <td>
-	                <span th:text="${category.topCategory}"></span>
-	            </td>
-	            <td>
-	                <span th:text="${category.status}"></span>
-	            </td>
-	        </tr>
-	        </tbody>
-	    </table>
-    </div>
-
-    <div>
-	    <div style="float: right">
-	    	<a th:href="@{'/'+${path}}">목록</a>
-	    </div>
-	    <div style="float: left">
-	    	<a th:href="@{'/'+${path}+'/category/add?path='+${path}}">카테고리 추가</a> <br>
-	    </div>
-    </div>
+	<div id="actList">
+		<table style="width: 100%;" cellpadding="0" cellspacing="0">
+			<thead>
+			<tr class="top">
+				<th id="leftth" style="border-radius: 15px 0 0 0;">No.</th>
+				<th>이름</th>
+				<th id="rigthth" style="border-radius: 0 15px 0 0;">게시판</th>
+<!--				<th id="rigthth" style="border-radius: 0 15px 0 0;">Status</th>-->
+			</tr>
+			</thead>
+			<tbody>
+			<tr th:each="category : ${categoryList}">
+				<td id="no">
+					<span th:text="${category.id}"></span>
+				</td>
+				<td>
+					<a th:href="@{'/'+${path}+'/category/detail/' + ${category.id}+'?topCategory='+${topCategory}}">
+						<span th:text="${category.memo}"></span>
+					</a>
+				</td>
+				<td>
+					<span th:if="${category.topCategory==1}" th:text="공지사항"></span>
+				</td>
+<!--				<td>-->
+<!--					<span th:text="${category.status}"></span>-->
+<!--				</td>-->
+			</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="down">
+		<div id="Paging">
+		</div>
+		<button id="list" type="button" name="button">
+			<a th:href="@{'/'+${path}+'/category/add?path='+${path}}"><img src="/img/register.png"/></a>
+		</button>
+		<button id="list" type="button" name="button">
+			<a th:href="@{'/'+${path}}"><img src="/img/cancel.png"/></a>
+		</button>
+	</div>
 </div>
 
 <div lang="en" th:replace="common/footer :: footer"></div>
